[project]
name = "tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "datasets>=4.2.0",
    "dotenv>=0.9.9",
    "soundfile>=0.13.1",
    "torch==2.8.0",
    "torchcodec>=0.8.0",
    "transformers>=4.57.1",
]
